k8s/service-age-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-age
spec:
  selector:
    app: service-age
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
