k8s/service-poids-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-poids
spec:
  selector:
    app: service-poids
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
